--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             
         </div>
         <form id="form">
-            <input placeholder="Your email address" id="inputbox" type="email" pattern="/^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" required>
+            <input placeholder="Your email address" id="inputbox" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
             <input class="fontstyle" id="sumbitbutton" type="submit" value="Notify me">
         </form>
         <img  id="image"src="images/illustration-dashboard.png"  width="700px" alt="" srcset="">
